REGRESSION (r244436): IndexedDB Uint8Array returned as ArrayBuffer https://bugs.webkit.org/show_bug.cgi?id=198738 <rdar://problem/51614053>

Reviewed by Brady Eidson.

In InexedDB, two binary keys are the same as long as their data is the same.

Modified tests: storage/indexeddb/key-type-binary.html
                storage/indexeddb/key-type-binary-private.html

* bindings/js/IDBBindingUtilities.cpp:
(WebCore::injectIDBKeyIntoScriptValue):
* bindings/js/SerializedScriptValue.cpp:
(WebCore::CloneDeserializer::readArrayBufferView):


Canonical link: https://commits.webkit.org/213143@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@246770 268f45cc-cd09-0410-ab3c-d52691b4dbfc